--- a/atari/doc/style.css
+++ b/atari/doc/style.css
@@ -40,7 +40,8 @@ body{
     color: white;
     padding-top: 20px;
     padding-left: 20px;
-    
+    margin: auto;
+    text-align: center;
 }
 
 .active{
